# birdbench

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  pyproject.toml
.cache/: 0b04b0ba2c03b735.json  0ccd950685860fb2.json  13f38b457ebde2e8.json  19f64f6eac1c6fa4.json  1bf9d1325bfada9c.json  21687cd87325f0fc.json  22eb3e01506502c5.json  23be0612b976fb62.json  255fcf43cd31a152.json  263aced54e73ebfb.json  27a3d7e3d189a698.json  2d536a00f5ded9a0.json  2df80270efa78621.json  2fff36d763e4d90e.json  3077cd665cea63d5.json  31d775ee38f9ab22.json  34666bac599527f4.json  35d71014614e1de9.json  35e0a26ed4e3a765.json  364b0dc9c3c05944.json  394590711a352ad4.json  39a5bcb5dd9297b5.json  3a1cfb0a64b7d8d7.json  3b11db9de5e604de.json  3b33aab83ac06452.json  3b3bf1689e09846e.json  3bb139378382e203.json  40121f5a400e960a.json  41736adc8f251caa.json  42981565efda0f60.json  46544dc22d6ae802.json  545be6392d9428a4.json  55d82a5aa646e511.json  5766226bb19d0fe4.json  59454be967173e11.json  5986b2230e331028.json  5ecc7e01b1882682.json  63024751b5f0fb2d.json  630ec1a9d246ff90.json  63381eab28274f5a.json  (+90 more)
configs/: doubao_price_overlay.json  models.json
docs/: DESIGN.md  benchmark-design.md  evalset.md  v0-results.md  v1-6-cost.md  v1-m3-verify.md  v1-results-111.md
prompts/: species_id.v0.md
runs/: leaderboard.json  predictions.jsonl  report.html
scripts/: fetch_evalset.py  make_charts.py  run_eval.py  sync-taxonomy.sh
tests/: conftest.py  test_bench.py  test_calibration.py  test_cli.py  test_core.py  test_evalset_dedup.py  test_gateway.py  test_web.py  (+12 more)
(+22 files in other folders)
